<resources>
    <string name="app_name">Shokanjali</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home"></string>
    <string name="app_id">508092730093443</string>
    <string name="f_l_p_s">fb508092730093443</string>
    <string name="menu_gallery"></string>
    <string name="menu_slideshow"></string>
    <string name="menu_tools"></string>
    <string name="menu_share"></string>
    <string name="menu_send"></string>
    <string name="Citys">Anantapur, Chittoor, Kakinada, Guntur, Hyderabad, Karimnagar, Khammam, Krishna, Kurnool, Mahbubnagar, Medak, Nalgonda, Nizamabad, Ongole, Srikakulam, Nellore, Visakhapatnam, Vizianagaram, Warangal, Eluru, Kadapa, Anjaw, Changlang, EastSiang, KurungKumey, Lohit, LowerDibangValley, LowerSubansiri, PapumPare, Tawang, Tirap, DibangValley, UpperSiang, UpperSubansiri, WestKameng, WestSiang, Baksa, Barpeta, Bongaigaon, Cachar, Chirang, Darrang, Dhemaji, DimaHasao, Dhubri, Dibrugarh, Goalpara, Golaghat, Hailakandi, Jorhat, Kamrup, KamrupMetropolitan, KarbiAnglong, Karimganj, Kokrajhar, Lakhimpur, Marigaon, Nagaon, Nalbari, Sibsagar, Sonitpur, Tinsukia, Udalguri, Araria, Arwal, Aurangabad, Banka, Begusarai, Bhagalpur, Bhojpur, Buxar, Darbhanga, EastChamparan, Gaya, Gopalganj, Jamui, Jehanabad, Kaimur, Katihar, Khagaria, Kishanganj, Lakhisarai, Madhepura, Madhubani, Munger, Muzaffarpur, Nalanda, Nawada, Patna, Purnia, Rohtas, Saharsa, Samastipur, Saran, Sheikhpura, Sheohar, Sitamarhi, Siwan, Supaul, Vaishali, WestChamparan, Chandigarh, Bastar, Bijapur, Bilaspur, Dantewada, Dhamtari, Durg, Jashpur, Janjgir-Champa, Korba, Koriya, Kanker, Kabirdham(Kawardha), Mahasamund, Narayanpur, Raigarh, Rajnandgaon, Raipur, Surguja, DadraandNagarHaveli Daman, Diu, CentralDelhi, EastDelhi, NewDelhi, NorthDelhi, NorthEastDelhi, NorthWestDelhi, SouthDelhi, SouthWestDelhi, WestDelhi, NorthGoa, SouthGoa Ahmedabad, Amrelidistrict, Anand, Banaskantha, Bharuch, Bhavnagar, Dahod, TheDangs, Gandhinagar, Jamnagar, Junagadh, Kutch, Kheda, Mehsana, Narmada, Navsari, Patan, Panchmahal, Porbandar, Rajkot, Sabarkantha, Surendranagar, Surat, Vyara, Vadodara, Valsad, Ambala, Bhiwani, Faridabad, Fatehabad, Gurgaon, Hissar, Jhajjar, Jind, Karnal, Kaithal, Kurukshetra, Mahendragarh, Mewat, Palwal, Panchkula, Panipat, Rewari, Rohtak, Sirsa, Sonipat, YamunaNagar, Chamba, Hamirpur, Kangra, Kinnaur, Kullu, LahaulandSpiti, Mandi, Shimla, Sirmaur, Solan, Una, Anantnag, Badgam, Bandipora, Baramulla, Doda, Ganderbal, Jammu, Kargil, Kathua, Kishtwar, Kupwara, Kulgam, Leh, Poonch, Pulwama, Rajauri, Ramban, Reasi, Samba, Shopian, Srinagar, Udhampur, Bokaro, Chatra, Deoghar, Dhanbad, Dumka, EastSinghbhum, Garhwa, Giridih, Godda, Gumla, Hazaribag, Jamtara, Khunti, Koderma, Latehar, Lohardaga, Pakur, Palamu, Ramgarh, Ranchi, Sahibganj, SeraikelaKharsawan, Simdega, Bagalkot, BangaloreRural, BangaloreUrban, Belgaum, Bellary, Bidar, Chamarajnagar, Chikkamagaluru, Chikkaballapur, Chitradurga, Davanagere, Dharwad, DakshinaKannada, Gadag, Gulbarga, Hassan, Haveridistrict, Kodagu, Kolar, Koppal, Mandya, Mysore, Raichur, Shimoga, Tumkur, Udupi, UttaraKannada, Ramanagara, Yadgir, Alappuzha, Ernakulam, Idukki, Kannur, Kasaragod, Kollam, Kottayam, Kozhikode, Malappuram, Palakkad, Pathanamthitta, Thrissur, Thiruvananthapuram, Wayanad, Alirajpur, Anuppur, AshokNagar, Balaghat, Barwani, Betul, Bhind, Bhopal, Burhanpur, Chhatarpur, Chhindwara, Damoh, Datia, Dewas, Dhar, Dindori, Guna, Gwalior, Harda, Hoshangabad, Indore, Jabalpur, Jhabua, Katni, Khandwa(EastNimar), Khargone(WestNimar), Mandla, Mandsaur, Morena, Narsinghpur, Neemuch, Panna, Rewa, Rajgarh, Ratlam, Raisen, Sagar, Satna, Sehore, Seoni, Shahdol, Shajapur, Sheopur, Shivpuri, Sidhi, Singrauli, Tikamgarh, Ujjain, Umaria, Vidisha, Ahmednagar, Akola, Amravati, Bhandara, Beed, Buldhana, Chandrapur, Dhule, Gadchiroli, Gondia, Hingoli, Jalgaon, Jalna, Kolhapur, Latur, MumbaiCity, Mumbaisuburban, Nandurbar, Nanded, Nagpur, Nashik, Osmanabad, Parbhani, Pune, Raigad, Ratnagiri, Sindhudurg, Sangli, Solapur, Satara, Thane, Wardha, Washim, Yavatmal, Bishnupur, Churachandpur, Chandel, ImphalEast, Senapati, Tamenglong, Thoubal, Ukhrul, ImphalWest, EastGaroHills, EastKhasiHills, JaintiaHills, RiBhoi, SouthGaroHills, WestGaroHills, WestKhasiHills, Aizawl, Champhai, Kolasib, Lawngtlai, Lunglei, Mamit, Saiha, Serchhip, Dimapur, Kohima, Mokokchung, Mon, Phek, Tuensang, Wokha, Zunheboto, Angul, Boudh(Bauda), Bhadrak, Balangir, Bargarh(Baragarh), Balasore, Cuttack, Debagarh(Deogarh), Dhenkanal, Ganjam, Gajapati, Jharsuguda, Jajpur, Jagatsinghpur, Khordha, Kendujhar(Keonjhar), Kalahandi, Kandhamal, Koraput, Kendrapara, Malkangiri, Mayurbhanj, Nabarangpur, Nuapada, Nayagarh, Puri, Rayagada, Sambalpur, Subarnapur(Sonepur), Sundergarh, Karaikal, Mahe, Pondicherry, Yanam, Amritsar, Barnala, Bathinda, Firozpur, Faridkot, FatehgarhSahib, Fazilka, Gurdaspur, Hoshiarpur, Jalandhar, Kapurthala, Ludhiana, Mansa, Moga, SriMuktsarSahib, Pathankot, Patiala, Rupnagar, Ajitgarh(Mohali), Sangrur, Nawanshahr, TarnTaran, Ajmer, Alwar, Bikaner, Barmer, Banswara, Bharatpur, Baran, Bundi, Bhilwara, Churu, Chittorgarh, Dausa, Dholpur, Dungapur, Ganganagar, Hanumangarh, Jhunjhunu, Jalore, Jodhpur, Jaipur, Jaisalmer, Jhalawar, Karauli, Kota, Nagaur, Pali, Pratapgarh, Rajsamand, Sikar, SawaiMadhopur, Sirohi, Tonk, Udaipur, EastSikkim, NorthSikkim, SouthSikkim, WestSikkim, Ariyalur, Chennai, Coimbatore, Cuddalore, Dharmapuri, Dindigul, Erode, Kanchipuram, Kanyakumari, Karur, Madurai, Nagapattinam, Nilgiris, Namakkal, Perambalur, Pudukkottai, Ramanathapuram, Salem, Sivaganga, Tirupur, Tiruchirappalli, Theni, Tirunelveli, Thanjavur, Thoothukudi, Tiruvallur, Tiruvarur, Tiruvannamalai, Vellore, Viluppuram, Virudhunagar, Dhalai, NorthTripura, SouthTripura, Khowai, WestTripura, Agra, Allahabad, Aligarh, AmbedkarNagar, Auraiya, Azamgarh, Barabanki, Budaun, Bagpat, Bahraich, Bijnor, Ballia, Banda, Balrampur, Bareilly, Basti, Bulandshahr, Chandauli, ChhatrapatiShahujiMaharajNagar, Chitrakoot, Deoria, Etah, KanshiRamNagar, Etawah, Firozabad, Farrukhabad, Fatehpur, Faizabad, GautamBuddhNagar, Gonda, Ghazipur, Gorakhpur, Ghaziabad, Hardoi, MahamayaNagar, Jhansi, Jalaun, JyotibaPhuleNagar, Jaunpurdistrict, RamabaiNagar(KanpurDehat), Kannauj, Kanpur, Kaushambi, Kushinagar, Lalitpur, LakhimpurKheri, Lucknow, Mau, Meerut, Maharajganj, Mahoba, Mirzapur, Moradabad, Mainpuri, Birbhum,Bankura,Bardhaman,Darjeeling,Dakshin Dinajpur,Hooghly,Howrah,Jalpaiguri,Cooch Behar,Kolkata,Maldah,Paschim Medinipur,Purba Medinipur,Murshidabad,Nadia,North 24 Parganas,South Parganas,Purulia,Uttar Dinajpur, Mathura, Muzaffarnagar, PanchsheelNagardistrict(Hapur), Pilibhit, Shamli, Rampur, Raebareli, Saharanpur, Sitapur, Shahjahanpur, SantKabirNagar, Siddharthnagar, Sonbhadra, SantRavidasNagar, Sultanpur, Shravasti, Unnao, Varanasi, Almora, Bageshwar, Chamoli, Champawat, Dehradun, Haridwar, Nainital, PauriGarhwal, Pithoragarh, Rudraprayag, TehriGarhwal, UdhamSinghNagar, Uttarkashi</string>
    <string name="about">This app is meant to inform people about the demise of their near and dear ones.\n\n
This app is purely made to inform the people about the loss of a person and it does not mean to hurt the
        sentiments of the people of any religion or any caste in any way or in any other sense.\n\n
Any demise published in this app has been published after proper verification and all the records
        of the publisher are adequately maintained.Any misinformation on the part of publisher will make him accountable for any
        incorrect information provided by him and stringent actions will be taken against him.\n\nThis app will also help those people who are financially not well off to publish the demise of their loved and Respected once and inform the poeple about the loss.

    </string>
</resources>
