<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.traidev.shokanjali.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.traidev.shokanjali.ui.pandits.PanditsFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_pandits" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.traidev.shokanjali.ui.ChooseView.ChooseView"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_chooseView" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.traidev.shokanjali.ui.regsiterPandit.RegPandit"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_post" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.traidev.shokanjali.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.traidev.shokanjali.ui.about.AboutFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_about" />
</navigation>